--- a/login/index.html
+++ b/login/index.html
@@ -9,10 +9,15 @@
     <div class="login form">
       <header>Login</header>
       <form action="#">
-        <input type="text" placeholder="Enter your email">
-        <input type="password" placeholder="Enter your password">
+        <div class="input-field">
+          <input type="text" id="email" placeholder="Enter your email">
+        </div>
+        <div class="input-field password-field">
+          <input type="password" id="password" placeholder="Enter your password">
+          <button type="button" class="toggle-password" onclick="togglePassword()"></button>
+        </div>
         <a href="./forgot">Forgot password?</a>
-        <input type="button" class="button" value="Login">
+        <input type="button" class="button" value="Login" onclick="validateLogin()">
       </form>
       <div class="signup">
         <span class="signup">Belum punya akun? 
