--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
   <div class="top-bar">
     <div class="logo">
       <img src="./resources/images/pultime-logo.png" alt="App Logo">
-      <span>Good Morning</span>
     </div>
     <div class="profile">
       <span>Andrew Smith</span>
-      <img src="./resources/images/profile-icon.png" alt="Profile Icon">
+      <img src="./resources/images/profile.jpg" alt="Profile Icon">
     </div>
   </div>
 
