--- a/class/index.html
+++ b/class/index.html
@@ -42,6 +42,13 @@
         <div id="calendar"></div>
       </div>
     </main>
+
+    <aside class="right-sidebar">
+      <nav>
+      <button id="Tugas_baru">Tugas +</button>
+    </nav>
+    <button id="logout" class="keluar-kelas">Keluar kelas</button>
+    </aside>
   </div>
 
   <!-- FullCalendar Script -->
