--- a/signup/index.html
+++ b/signup/index.html
@@ -9,11 +9,12 @@
     <div class="registration form">
       <header>Signup</header>
       <form action="#">
-        <input type="text" placeholder="Enter your email">
-        <input type="password" placeholder="Create a password">
-        <input type="password" placeholder="Confirm your password">
-        <input type="button" class="button" value="Signup">
-      </form>
+        <input id="email" type="text" placeholder="Enter your email">
+        <input id="username" type="text" placeholder="Enter your username">
+        <input id="password" type="password" placeholder="Create a password">
+        <input id="confirmPassword" type="password" placeholder="Confirm your password">
+        <input id="signupButton" type="button" class="button" value="Signup">
+      </form>      
       <div class="login">
         <span class="login">Sudah punya akun? 
           <a href="../login">Login</a>
@@ -21,5 +22,6 @@
       </div>
     </div>
   </div>
+  <script src="../resources/scripts/signup.js"></script>
 </body>
 </html>
