--- a/login/forgot/index.html
+++ b/login/forgot/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <title>Forgot password | Pultime</title>
-  <script src=></script>
   <link rel="stylesheet" href="../../resources/styles/forgot.css">
 </head>
 <body>
   <div class="container">
     <input type="checkbox" id="check">
     <div class="New_pass form">
-      <a href="index.html"><image src="../../resources/icon/maki_arrow.jpg"></image></a>
+      <a href="../"><image src="../../resources/icon/maki_arrow.jpg"></image></a>
       <header>Forgot password?</header>
       <h5 style="text-align:center">Kami akan mengirimkan email untuk</h5>
       <h5 style="text-align:center"> mengubah password mu</h5>
@@ -19,5 +18,6 @@
       </form>
     </div>
   </div>
+  <script src="../../resources/scripts/forgot.js"></script>
 </body>
 </html>
