--- a/login/index.html
+++ b/login/index.html
@@ -10,7 +10,7 @@
       <header>Login</header>
       <form action="#">
         <div class="input-field">
-          <input type="text" id="email" placeholder="Enter your email">
+          <input type="text" id="username" placeholder="Enter your username">
         </div>
         <div class="input-field password-field">
           <input type="password" id="password" placeholder="Enter your password">
