--- a/login/index.html
+++ b/login/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Login | Pultime</title>
   <link rel="stylesheet" href="../resources/styles/login.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <div class="container">
