--- a/login/reset/index.html
+++ b/login/reset/index.html
@@ -3,12 +3,15 @@
 <head>
   <title>Reset Password | Pultime</title>
   <link rel="stylesheet" href="../../resources/styles/reset_password.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <div class="container">
     <input type="checkbox" id="check">
     <div class="New_pass form">
-      <a href="../"><image src="../../resources/icon/maki_arrow.jpg"></image></a>
+      <a href="../">
+        <img src="../../resources/icon/maki_arrow.jpg" alt="Back">
+      </a>
       <header>Reset Password</header>
       <form action="#">
         <input type="password" id="newPassword" placeholder="New password" required>
