--- a/signup/index.html
+++ b/signup/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <title>Signup | Pultime</title>
-  <link rel="stylesheet" href="../resources//styles/signup.css">
+  <link rel="stylesheet" href="../resources/styles/signup.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <div class="container">
@@ -14,10 +15,10 @@
         <input id="password" type="password" placeholder="Create a password">
         <input id="confirmPassword" type="password" placeholder="Confirm your password">
         <input id="signupButton" type="button" class="button" value="Signup">
-      </form>      
+      </form>
       <div class="login">
-        <span class="login">Sudah punya akun? 
-          <a href="../login">Login</a>
+        <span class="login">
+          Sudah punya akun? <a href="../login">Login</a>
         </span>
       </div>
     </div>
