--- a/login/forgot/index.html
+++ b/login/forgot/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Forgot password | Pultime</title>
+  <title>Forgot Password | Pultime</title>
   <link rel="stylesheet" href="../../resources/styles/forgot.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
   <div class="container">
     <input type="checkbox" id="check">
     <div class="New_pass form">
-      <a href="../"><image src="../../resources/icon/maki_arrow.jpg"></image></a>
-      <header>Forgot password?</header>
-      <h5 style="text-align:center">Kami akan mengirimkan email untuk</h5>
-      <h5 style="text-align:center"> mengubah password mu</h5>
+      <a href="../">
+        <img src="../../resources/icon/maki_arrow.jpg" alt="Back">
+      </a>
+      <header>Forgot Password?</header>
+      <h5 style="text-align: center;">Kami akan mengirimkan email untuk</h5>
+      <h5 style="text-align: center;">mengubah password Anda</h5>
       <form action="#">
-        <input type="email" placeholder="Enter your email">
-        <input type="button" class="button" value="Email Me">
+        <input id="emailInput" type="email" placeholder="Enter your email">
+        <input id="sendEmailButton" type="button" class="button" value="Email Me">
       </form>
     </div>
   </div>
