--- a/login/index.html
+++ b/login/index.html
@@ -18,7 +18,7 @@
           <button type="button" class="toggle-password" onclick="togglePassword()"></button>
         </div>
         <a href="./forgot">Forgot password?</a>
-        <input type="button" class="button" value="Login" onclick="validateLogin()">
+        <input type="button" class="button" value="Login">
       </form>
       <div class="signup">
         <span class="signup">Belum punya akun? 
