--- a/class/index.html
+++ b/class/index.html
@@ -12,6 +12,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../resources/styles/sidebar.css">
     <link rel="stylesheet" href="../resources/styles/class.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
