implementasi update dan hapus tugas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     </div>
                 </div>
-                <img id="add-class" class="tambah" src="./resources/images/tambah.svg" alt="" height="20px"
+                <img id="add-class" class="tambah" src="./resources/images/add.svg" alt="" height="20px"
                     width="20px">
                 <div id="class-popup" class="popup-dropdown">
                     <div id="create-class-option" class="menu-item">Create Class</div>
@@ -56,7 +56,7 @@
                         <a href="./team/">Group C</a>
                     </div>
                 </div>
-                <img id="add-team" class="tambah" src="./resources/images/tambah.svg" alt="" height="20px" width="20px">
+                <img id="add-team" class="tambah" src="./resources/images/add.svg" alt="" height="20px" width="20px">
                 <div id="team-popup" class="popup-dropdown">
                     <div id="create-team-option" class="menu-item">Create Team</div>
                     <div id="join-team-option" class="menu-item">Join Team</div>
@@ -84,7 +84,8 @@
             <div class="task">
                 <img src="./resources/images/task.svg" alt="" width="20px" height="20px">
                 <p>Task</p>
-                <img id="add-task" class="tambah" src="./resources/images/tambah.svg" alt="" height="20px" width="20px">
+                <img id="add-task" class="tambah" src="../resources/images/add.svg" alt="Tambah Tugas"
+                    title="Tambah Tugas" alt="" height="20px" width="20px">
             </div>
         </div>
     </div>
