--- a/class/index.html
+++ b/class/index.html
@@ -38,7 +38,7 @@
 
                     </div>
                 </div>
-                <img id="add-class" class="tambah" src="../resources/images/tambah.svg" alt="" height="20px"
+                <img id="add-class" class="tambah" src="../resources/images/add.svg" alt="" height="20px"
                     width="20px">
                 <div id="class-popup" class="popup-dropdown">
                     <div id="create-class-option" class="menu-item">Create Class</div>
@@ -58,7 +58,7 @@
                         <a href="../team/">Group C</a>
                     </div>
                 </div>
-                <img id="add-team" class="tambah" src="../resources/images/tambah.svg" alt="" height="20px"
+                <img id="add-team" class="tambah" src="../resources/images/add.svg" alt="" height="20px"
                     width="20px">
                 <div id="team-popup" class="popup-dropdown">
                     <div id="create-team-option" class="menu-item">Create Team</div>
@@ -89,10 +89,11 @@
                 <div class="class-code-wrapper">
                     <h5 id="class_code">...</h5>
                     <div class="copy-icon-wrapper">
-                        <img id="copy-icon" src="../resources/icon/copy_icon.svg" alt="Copy" title="Copy to clipboard" width="16px" height="16px" style="cursor: pointer;">
+                        <img id="copy-icon" src="../resources/icon/copy_icon.svg" alt="Copy" title="Copy to clipboard"
+                            width="16px" height="16px" style="cursor: pointer;">
                     </div>
                 </div>
-            </div>            
+            </div>
             <div class="menu">
                 <div class="item">
                     <img src="../resources/images/kelas.svg" alt="" height="20px" width="20px">
@@ -109,8 +110,8 @@
             <div class="task">
                 <img src="../resources/images/task.svg" alt="" width="20px" height="20px">
                 <p>Task</p>
-                <img id="add-task" class="tambah" src="../resources/images/tambah.svg" alt="" height="20px"
-                    width="20px">
+                <img id="add-task" class="tambah" src="../resources/images/add.svg" alt="Tambah Tugas"
+                    title="Tambah Tugas" alt="" height="20px" width="20px">
             </div>
             <div id="leave_class" class="leave-class">
                 <img src="../resources/images/logout.svg" alt="">
@@ -161,7 +162,7 @@
                 <div class="form-group">
                     <label for="show-updatable-task-date">Deadline</label>
                     <input type="datetime-local" id="show-updatable-task-date" disabled>
-                </div>                
+                </div>
                 <div class="action-buttons">
                     <button type="button" id="edit-updatable-task" class="btn btn-edit">Ubah</button>
                     <div id="update-actions" style="display: none;">
