implement team page

--- a/class/index.html
+++ b/class/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class | Pultime</title>
-
     <!-- FullCalendar CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar/main.min.css" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../resources/styles/sidebar.css">
     <link rel="stylesheet" href="../resources/styles/class.css">
@@ -34,7 +32,7 @@
                         <a href="#">Class</a>
                         <img class="arrow" src="../resources/images/arrowdrop.svg" alt="" height="15px">
                     </div>
-                    <div id="dropdown-content" class="dropdown-content">
+                    <div id="dropdown-content-classes" class="dropdown-content">
 
                     </div>
                 </div>
@@ -45,17 +43,15 @@
                     <div id="join-class-option" class="menu-item">Join Class</div>
                 </div>
             </div>
-            <div class="item" style="display: none;">
+            <div class="item">
                 <img src="../resources/images/group.svg" alt="" height="20px" width="20px">
                 <div class="dropdown">
                     <div class="dropdown-toggle">
                         <a href="#">Team</a>
                         <img class="arrow" src="../resources/images/arrowdrop.svg" alt="" height="15px">
                     </div>
-                    <div class="dropdown-content">
-                        <a href="../team/">Group A</a>
-                        <a href="../team/">Group B</a>
-                        <a href="../team/">Group C</a>
+                    <div id="dropdown-content-teams" class="dropdown-content">
+
                     </div>
                 </div>
                 <img id="add-team" class="tambah" src="../resources/images/add.svg" alt="" height="20px"
