debug forgot page

--- a/login/forgot/index.html
+++ b/login/forgot/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <input type="checkbox" id="check">
     <div class="New_pass form">
-      <a href="../">
+      <a href="/login">
         <img src="../../resources/icon/maki_arrow.jpg" alt="Back">
       </a>
       <header>Forgot Password?</header>
