debug forgot page

--- a/login/index.html
+++ b/login/index.html
@@ -17,7 +17,7 @@
           <input type="password" id="password" placeholder="Enter your password">
           <button type="button" class="toggle-password" onclick="togglePassword()"></button>
         </div>
-        <a href="forgot">Forgot password?</a>
+        <a href="/login/forgot">Forgot password?</a>
         <input type="button" class="button" value="Login">
       </form>
       <div class="signup">
