--- a/login/reset/index.html
+++ b/login/reset/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
   <div class="container">
-    <input type="checkbox" id="check">
     <div class="New_pass form">
-      <a href="/login">
-        <img src="../../resources/icon/maki_arrow.jpg" alt="Back">
-      </a>
       <header>Reset Password</header>
       <form action="#">
         <input type="password" id="newPassword" placeholder="New password" required>
         <input type="password" id="confirmPassword" placeholder="Confirm new password" required>
         <input type="button" class="button" value="Continue" id="resetButton">
       </form>
+      <div class="link-container">
+        <span class="default-text">or</span>
+        <a href="/login" class="sign-in-link">login</a>
+      </div>
     </div>
   </div>
   <script src="../../resources/scripts/reset_password.js"></script>
